--- a/EatTogether/CustomAdvertisementTableViewCell.xib
+++ b/EatTogether/CustomAdvertisementTableViewCell.xib
@@ -13,17 +13,14 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ceu-Jk-4KJ">
+                        <rect key="frame" x="0.0" y="122.5" width="320" height="47"/>
+                        <color key="backgroundColor" red="0.68893124439999998" green="0.68893124439999998" blue="0.68893124439999998" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vaj-gU-7hv">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="122.5"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="122.5" id="hb0-uA-pN8"/>
-                        </constraints>
-                    </imageView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pgp-cB-IN8">
-                        <rect key="frame" x="240" y="79.5" width="80" height="80"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="80" id="49m-nc-6fE"/>
-                            <constraint firstAttribute="width" constant="80" id="BLF-OS-O31"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z5w-f8-DSu">
@@ -38,10 +35,21 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pgp-cB-IN8">
+                        <rect key="frame" x="240" y="79.5" width="80" height="80"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="80" id="49m-nc-6fE"/>
+                            <constraint firstAttribute="width" constant="80" id="BLF-OS-O31"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="Ceu-Jk-4KJ" firstAttribute="top" secondItem="vaj-gU-7hv" secondAttribute="bottom" id="1XS-wz-JN3"/>
                     <constraint firstItem="z5w-f8-DSu" firstAttribute="leading" secondItem="KdD-cl-hjt" secondAttribute="trailing" constant="40" id="5fa-xT-Yo4"/>
                     <constraint firstItem="KdD-cl-hjt" firstAttribute="top" secondItem="vaj-gU-7hv" secondAttribute="bottom" constant="6.5" id="84I-ce-Wd3"/>
+                    <constraint firstAttribute="trailing" secondItem="Ceu-Jk-4KJ" secondAttribute="trailing" id="Bk8-6q-rxT"/>
+                    <constraint firstItem="Ceu-Jk-4KJ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="LCF-Xr-VvX"/>
+                    <constraint firstAttribute="bottom" secondItem="Ceu-Jk-4KJ" secondAttribute="bottom" id="MNZ-W8-MWJ"/>
                     <constraint firstAttribute="bottom" secondItem="pgp-cB-IN8" secondAttribute="bottom" constant="10" id="NVz-5B-uGe"/>
                     <constraint firstAttribute="bottom" secondItem="KdD-cl-hjt" secondAttribute="bottom" constant="20" id="PBa-wk-grp"/>
                     <constraint firstAttribute="trailing" secondItem="vaj-gU-7hv" secondAttribute="trailing" id="d3y-xj-FLE"/>
