--- a/EatTogether/CustomAdvertisementTableViewCell.xib
+++ b/EatTogether/CustomAdvertisementTableViewCell.xib
@@ -14,7 +14,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ceu-Jk-4KJ">
-                        <rect key="frame" x="0.0" y="122.5" width="320" height="47"/>
+                        <rect key="frame" x="0.0" y="123" width="320" height="47"/>
                         <color key="backgroundColor" red="0.68893124439999998" green="0.68893124439999998" blue="0.68893124439999998" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vaj-gU-7hv">
@@ -36,12 +36,25 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pgp-cB-IN8">
-                        <rect key="frame" x="240" y="79.5" width="80" height="80"/>
+                        <rect key="frame" x="240" y="80" width="80" height="80"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="80" id="49m-nc-6fE"/>
                             <constraint firstAttribute="width" constant="80" id="BLF-OS-O31"/>
                         </constraints>
                     </imageView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3So-NY-kRg">
+                        <rect key="frame" x="282" y="8" width="25" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="3EJ-TD-379"/>
+                            <constraint firstAttribute="width" constant="25" id="EWU-4w-DPY"/>
+                        </constraints>
+                        <state key="normal" image="favoriteOff.png">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <connections>
+                            <action selector="addToFavorites:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="gxv-BW-264"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="Ceu-Jk-4KJ" firstAttribute="top" secondItem="vaj-gU-7hv" secondAttribute="bottom" id="1XS-wz-JN3"/>
@@ -55,13 +68,16 @@
                     <constraint firstAttribute="trailing" secondItem="vaj-gU-7hv" secondAttribute="trailing" id="d3y-xj-FLE"/>
                     <constraint firstItem="vaj-gU-7hv" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="did-bd-UEN"/>
                     <constraint firstItem="KdD-cl-hjt" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="14" id="iaA-YS-PBN"/>
+                    <constraint firstAttribute="trailing" secondItem="3So-NY-kRg" secondAttribute="trailing" constant="13" id="jvP-eW-e5C"/>
                     <constraint firstItem="z5w-f8-DSu" firstAttribute="top" secondItem="vaj-gU-7hv" secondAttribute="bottom" constant="6.5" id="mVB-jN-iWM"/>
                     <constraint firstItem="vaj-gU-7hv" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="nPW-lC-Lf5"/>
+                    <constraint firstItem="3So-NY-kRg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="tYM-aP-ybq"/>
                     <constraint firstAttribute="trailing" secondItem="pgp-cB-IN8" secondAttribute="trailing" id="uKD-P8-jAz"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="customDetailImage" destination="vaj-gU-7hv" id="eIq-aj-rNW"/>
+                <outlet property="customFavoriteImage" destination="3So-NY-kRg" id="tOW-5h-0ua"/>
                 <outlet property="customLabelPrice" destination="KdD-cl-hjt" id="YpQ-gD-oyr"/>
                 <outlet property="customLabelStarter" destination="z5w-f8-DSu" id="dpT-ZA-7oL"/>
                 <outlet property="customUserImage" destination="pgp-cB-IN8" id="2y5-fZ-Bkx"/>
@@ -69,4 +85,7 @@
             <point key="canvasLocation" x="295" y="250"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="favoriteOff.png" width="25" height="24"/>
+    </resources>
 </document>
