--- a/EatTogether/Base.lproj/Main.storyboard
+++ b/EatTogether/Base.lproj/Main.storyboard
@@ -106,10 +106,10 @@
             </objects>
             <point key="canvasLocation" x="1262" y="361"/>
         </scene>
-        <!--Detail City List View Controller-->
+        <!--Detail City List Advertisement View Controller-->
         <scene sceneID="fRZ-go-aFV">
             <objects>
-                <viewController storyboardIdentifier="detailCityListViewController" id="wsU-pg-DGZ" customClass="DetailCityListViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="detailCityListAdvertisementViewController" id="wsU-pg-DGZ" customClass="DetailCityListAdvertisementViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="9X6-xb-cER"/>
                         <viewControllerLayoutGuide type="bottom" id="NgV-6J-Zx5"/>
@@ -142,6 +142,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1u7-K5-40A" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1979" y="361"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="a5T-3Z-jnm">
+            <objects>
+                <viewController storyboardIdentifier="mapCityListAdvertisementViewController" id="LJu-UX-SoF" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="oyI-xS-3D0"/>
+                        <viewControllerLayoutGuide type="bottom" id="JgG-2f-VIr"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="1sp-O3-f2n">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="a2t-13-f8Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2637" y="361"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="wzo-gK-CSX">
